Fix table header for dark mode

--- a/stdweb/static/main.css
+++ b/stdweb/static/main.css
@@ -123,7 +123,7 @@
 }
 
 .table thead th {
-  background-color: #efefef;
+  background-color: var(--bs-secondary-bg);
 }
 
 /* Second header row - usually units or so */
